# quaestor-mini-cluster

./: .gitignore  LICENSE  Quaestor.DotSettings  Quaestor.MiniCluster.sln  Quaestor.MiniCluster.sln.DotSettings  QuaestorSolution.NET6.bat  QuaestorSolution.NET8.bat  README.md  build.cmd  clean_obj_dirs.bat
examples/: CheckHealth.ps1  DiscoverServices.ps1  DiscoverTopService.ps1  GetLoadReport.ps1
py/: pyproject.toml
py/docs/source/: conf.py  index.rst  samples.rst
py/src/quaestor/: service_discovery.py  service_location.py
py/tests/: test_service_discovery.py
src/: Directory.Build.props  Quaestor.DotSettings  Quaestor.MiniCluster.Key.snk
src/Quaestor.Cluster.Console/: Program.cs  Quaestor.Cluster.Console.csproj  QuaestorClusterOptions.cs  quaestor.cluster.config.yml
src/Quaestor.Console/: Program.cs  Quaestor.Console.csproj  QuaestorClusterOptions.cs  log4net.config  quaestor.config.yml
src/Quaestor.Environment/: AgentConfiguration.cs  ConfigUtils.cs  KnownAgents.cs  Log.cs  Quaestor.Environment.csproj  ShutdownAction.cs  WellKnownAgentType.cs
src/Quaestor.KeyValueStore/: EtcdKeyValueStore.cs  IKeyValueStore.cs  LocalKeyValueStore.cs  Quaestor.KeyValueStore.csproj  ServiceLocation.cs  ServiceRegistry.cs
src/Quaestor.LoadBalancer.Console/: Program.cs  Quaestor.LoadBalancer.Console.csproj  QuaestorLoadBalancerOptions.cs  log4net.config  quaestor.loadbalancer.config.yml
src/Quaestor.LoadBalancing/: LoadBalancerConfig.cs  LoadBalancingService.cs  LoadReportComparer.cs  Quaestor.LoadBalancing.csproj  QualifiedService.cs  ServerConfig.cs  (+3 more)
(+85 files in other folders)
