[project]
name = "quaestor"
version = "0.9.4"
description = "Python API for the Quaestor load balancer."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "grpcio",
    "protobuf<5.0",
]
authors = [
    {name = "Dira GeoSystems", email = "programmers@dirageosystems.ch"}
]
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62.3",
    "pytest>=8.3.5",
]
 
[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
